// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function examples Anonymous function and call 1`] = `
Object {
  "arguments": Array [
    Object {
      "kind": "literal",
      "type": "int",
      "value": 10,
    },
  ],
  "kind": "call",
  "target": Object {
    "body": Array [
      Object {
        "identifier": "q",
        "kind": "let",
        "value": Object {
          "kind": "literal",
          "type": "int",
          "value": 99,
        },
      },
      Object {
        "identifier": "r",
        "kind": "let",
        "value": Object {
          "kind": "identifier",
          "name": "q",
        },
      },
      Object {
        "kind": "return",
        "value": Object {
          "kind": "identifier",
          "name": "q",
        },
      },
    ],
    "kind": "literal",
    "parameters": Array [
      Object {
        "name": "a",
        "type": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "int",
        },
      },
    ],
    "returns": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "int",
    },
    "type": "fn",
  },
}
`;

exports[`Function examples Fibonacci (call) 1`] = `
Object {
  "arguments": Array [
    Object {
      "kind": "literal",
      "type": "int",
      "value": 10,
    },
  ],
  "kind": "call",
  "target": Object {
    "kind": "identifier",
    "name": "fibo",
  },
}
`;

exports[`Function examples Fibonacci 1`] = `
Object {
  "identifier": "fibo",
  "kind": "let",
  "value": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "kind": "return",
            "value": Object {
              "kind": "literal",
              "type": "int",
              "value": 1,
            },
          },
        ],
        "condition": Object {
          "kind": "binary",
          "left": Object {
            "kind": "identifier",
            "name": "x",
          },
          "operator": "==",
          "right": Object {
            "kind": "literal",
            "type": "int",
            "value": 1,
          },
        },
        "kind": "if",
      },
      Object {
        "body": Array [
          Object {
            "kind": "return",
            "value": Object {
              "kind": "literal",
              "type": "int",
              "value": 0,
            },
          },
        ],
        "condition": Object {
          "kind": "binary",
          "left": Object {
            "kind": "identifier",
            "name": "x",
          },
          "operator": "==",
          "right": Object {
            "kind": "literal",
            "type": "int",
            "value": 0,
          },
        },
        "kind": "if",
      },
      Object {
        "kind": "return",
        "value": Object {
          "kind": "binary",
          "left": Object {
            "arguments": Array [
              Object {
                "kind": "binary",
                "left": Object {
                  "kind": "identifier",
                  "name": "x",
                },
                "operator": "-",
                "right": Object {
                  "kind": "literal",
                  "type": "int",
                  "value": 1,
                },
              },
            ],
            "kind": "call",
            "target": Object {
              "kind": "identifier",
              "name": "fibo",
            },
          },
          "operator": "+",
          "right": Object {
            "arguments": Array [
              Object {
                "kind": "binary",
                "left": Object {
                  "kind": "identifier",
                  "name": "x",
                },
                "operator": "-",
                "right": Object {
                  "kind": "literal",
                  "type": "int",
                  "value": 2,
                },
              },
            ],
            "kind": "call",
            "target": Object {
              "kind": "identifier",
              "name": "fibo",
            },
          },
        },
      },
    ],
    "kind": "literal",
    "parameters": Array [
      Object {
        "name": "x",
        "type": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "int",
        },
      },
    ],
    "returns": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "int",
    },
    "type": "fn",
  },
}
`;

exports[`Function examples Fizzbuzz and call 1`] = `
Object {
  "arguments": Array [
    Object {
      "kind": "literal",
      "type": "int",
      "value": 20,
    },
  ],
  "kind": "call",
  "target": Object {
    "body": Array [
      Object {
        "identifier": "x",
        "kind": "let",
        "value": Object {
          "kind": "literal",
          "type": "int",
          "value": 0,
        },
      },
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "kind": "literal",
                "type": "str",
                "value": "fizzbuzz",
              },
            ],
            "condition": Object {
              "kind": "binary",
              "left": Object {
                "kind": "binary",
                "left": Object {
                  "kind": "binary",
                  "left": Object {
                    "kind": "identifier",
                    "name": "x",
                  },
                  "operator": "%",
                  "right": Object {
                    "kind": "literal",
                    "type": "int",
                    "value": 3,
                  },
                },
                "operator": "==",
                "right": Object {
                  "kind": "literal",
                  "type": "int",
                  "value": 0,
                },
              },
              "operator": "&&",
              "right": Object {
                "kind": "binary",
                "left": Object {
                  "kind": "binary",
                  "left": Object {
                    "kind": "identifier",
                    "name": "x",
                  },
                  "operator": "%",
                  "right": Object {
                    "kind": "literal",
                    "type": "int",
                    "value": 5,
                  },
                },
                "operator": "==",
                "right": Object {
                  "kind": "literal",
                  "type": "int",
                  "value": 0,
                },
              },
            },
            "else": Object {
              "body": Array [
                Object {
                  "kind": "literal",
                  "type": "str",
                  "value": "buzz",
                },
              ],
              "condition": Object {
                "kind": "binary",
                "left": Object {
                  "kind": "binary",
                  "left": Object {
                    "kind": "identifier",
                    "name": "x",
                  },
                  "operator": "%",
                  "right": Object {
                    "kind": "literal",
                    "type": "int",
                    "value": 5,
                  },
                },
                "operator": "==",
                "right": Object {
                  "kind": "literal",
                  "type": "int",
                  "value": 0,
                },
              },
              "else": Object {
                "body": Array [
                  Object {
                    "kind": "literal",
                    "type": "str",
                    "value": "fizz",
                  },
                ],
                "condition": Object {
                  "kind": "binary",
                  "left": Object {
                    "kind": "binary",
                    "left": Object {
                      "kind": "identifier",
                      "name": "x",
                    },
                    "operator": "%",
                    "right": Object {
                      "kind": "literal",
                      "type": "int",
                      "value": 3,
                    },
                  },
                  "operator": "==",
                  "right": Object {
                    "kind": "literal",
                    "type": "int",
                    "value": 0,
                  },
                },
                "else": Array [
                  Object {
                    "kind": "identifier",
                    "name": "x",
                  },
                ],
                "kind": "if",
              },
              "kind": "if",
            },
            "kind": "if",
          },
          Object {
            "kind": "assign",
            "left": Object {
              "kind": "identifier",
              "name": "x",
            },
            "operator": "=",
            "right": Object {
              "kind": "binary",
              "left": Object {
                "kind": "identifier",
                "name": "x",
              },
              "operator": "+",
              "right": Object {
                "kind": "literal",
                "type": "int",
                "value": 1,
              },
            },
          },
        ],
        "condition": Object {
          "kind": "binary",
          "left": Object {
            "kind": "identifier",
            "name": "x",
          },
          "operator": "<",
          "right": Object {
            "kind": "identifier",
            "name": "count",
          },
        },
        "kind": "while",
      },
      Object {
        "kind": "return",
        "value": Object {
          "kind": "literal",
          "type": "null",
          "value": null,
        },
      },
    ],
    "kind": "literal",
    "parameters": Array [
      Object {
        "name": "count",
        "type": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "int",
        },
      },
    ],
    "returns": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "null",
    },
    "type": "fn",
  },
}
`;
